# mac-dsp

./: .gitignore  CMakeLists.txt  Makefile  README.md
help/: rezer~.maxhelp  rez~.maxhelp  softcut~.maxhelp
source/loopers/rezer~/: README.md  rezer~.c
source/loopers/rezer~/demos/: _RezerGranny_.maxpat
source/loopers/softcut~/: CMakeLists.txt
source/loopers/vb.src~/: CMakeLists.txt
source/reverbs/gigaverb~/: gverb~.c
